<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".jogoComputadorActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background_black">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginBottom="80dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/jogador_vs_jogador"
            android:textColor="#93EBFF"
            android:textSize="30sp"
            android:layout_marginRight="5sp"
            android:fontFamily="@font/montserrat_thin"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/viewJogadorUm"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/background_blue"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/jogador_1"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/placarJogadorUm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="0"
                android:textColor="#93EBFF"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/viewJogadorDois"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/background_desabilitado"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/jogador_2"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/placarJogadorDois"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="0"
                android:textColor="#93EBFF"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/botao1"
                android:textSize="35sp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10sp"
                android:background="@drawable/background_blue"/>
            <Button
                android:id="@+id/botao2"
                android:textSize="35sp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10sp"
                android:background="@drawable/background_blue"/>
            <Button
                android:id="@+id/botao3"
                android:textSize="35sp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10sp"
                android:background="@drawable/background_blue"/>


        </LinearLayout>
        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:textSize="35sp"
                android:id="@+id/botao4"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10sp"

                android:background="@drawable/background_blue"/>
            <Button
                android:textSize="35sp"
                android:id="@+id/botao5"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10sp"
                android:background="@drawable/background_blue"/>
            <Button
                android:textSize="35sp"
                android:id="@+id/botao6"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10sp"
                android:background="@drawable/background_blue"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/botao7"
                android:textSize="35sp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10sp"
                android:background="@drawable/background_blue"/>
            <Button
                android:id="@+id/botao8"
                android:textSize="35sp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10sp"
                android:background="@drawable/background_blue"/>
            <Button
                android:id="@+id/botao9"
                android:textSize="35sp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10sp"
                android:background="@drawable/background_blue"/>


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/voltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sairicone"/>


    </LinearLayout>


</LinearLayout>